--- a/protego/www/index.html
+++ b/protego/www/index.html
@@ -40,6 +40,8 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/login.controller.js"></script>
+    
   </head>
   <body ng-app="starter">
     <!--
