--- a/protego/www/index.html
+++ b/protego/www/index.html
@@ -41,16 +41,16 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     <script src="js/login.controller.js"></script>
-    
+
   </head>
   <body ng-app="starter">
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
-    <ion-nav-bar class="bar-stable">
+    <!-- <ion-nav-bar class="bar-stable">
       <ion-nav-back-button>
       </ion-nav-back-button>
-    </ion-nav-bar>
+    </ion-nav-bar> -->
     <!--
       The views will be rendered in the <ion-nav-view> directive below
       Templates are in the /templates folder (but you could also
