installed StepCounter. Need to input steps into user profile and work with map tomorrow

--- a/protego/www/index.html
+++ b/protego/www/index.html
@@ -43,7 +43,7 @@
     <script src="js/login.controller.js"></script>
 
   </head>
-  <body ng-app="starter">
+  <body ng-app="starter" ng-controller="HomeCtrl">
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
