--- a/protego/www/index.html
+++ b/protego/www/index.html
@@ -31,7 +31,7 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
     <script src="lib/ionic-native/ionic.native.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAefA_U1G_LBVzz-0nxatgiYgZaar7T_l8&sensor=true"></script> -->
     <script src="lib/ngmap/build/scripts/ng-map.js"></script>
 
     <!-- your app's js -->
