--- a/protego/www/index.html
+++ b/protego/www/index.html
@@ -17,6 +17,7 @@
     </script>-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.css">
     <link href="https://fonts.googleapis.com/css?family=Berkshire%20Swash%7CRokkitt" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Paytone+One|Permanent+Marker" rel="stylesheet">>
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
@@ -26,6 +27,9 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+
 
 
     <!-- cordova script (this will be a 404 during development) -->
