--- a/protego/www/index.html
+++ b/protego/www/index.html
@@ -17,7 +17,7 @@
     </script>-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.css">
     <link href="https://fonts.googleapis.com/css?family=Berkshire%20Swash%7CRokkitt" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Paytone+One|Permanent+Marker" rel="stylesheet">>
+    <link href="https://fonts.googleapis.com/css?family=Paytone%20One%7CPermanent%20Marker" rel="stylesheet">>
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
